ext {
  minJavaVersionForTests = JavaVersion.VERSION_21
}

apply from: "$rootDir/gradle/java.gradle"
apply plugin: 'idea'

muzzle {
  pass {
    coreJdk('21')
  }
}

idea {
  module {
    jdkName = '21'
  }
}

/*
 * Declare previewTest, a test suite that requires the Javac/Java --enable-preview feature flag
 */
addTestSuite('previewTest')
// Configure groovy test file compilation
tasks.named("compilePreviewTestGroovy", GroovyCompile).configure {
  javaLauncher = javaToolchains.launcherFor {
    languageVersion = JavaLanguageVersion.of(21)
  }
  options.compilerArgs.add("--enable-preview")
}
// Configure Java test files compilation
tasks.named("compilePreviewTestJava", JavaCompile).configure {
  options.compilerArgs.add("--enable-preview")
}
// Configure tests execution
tasks.named("previewTest", Test).configure {
  jvmArgs = ['--enable-preview']
}

// Require the preview test suite to run as part of module check
tasks.named("check").configure {
  dependsOn "previewTest"
}

dependencies {
  testImplementation project(':dd-java-agent:instrumentation:trace-annotation')
}

// Set all compile tasks to use JDK21 but let instrumentation code targets 1.8 compatibility
project.tasks.withType(AbstractCompile).configureEach {
  setJavaVersion(it, 21)
}
tasks.named("compileJava", JavaCompile).configure {
  sourceCompatibility = JavaVersion.VERSION_1_8
  targetCompatibility = JavaVersion.VERSION_1_8
}
